src/objects/Staffing_Request__c.object
<CustomObject>
    <description>The VA Recruitment Tracker module will store staffing request data in this custom object. Almost all data for this object is imported from USA Staffing.</description>
    <fields>
        <fullName>ACWA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACWA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Appointment_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Announcement Appointment Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement_Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Announcement Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Announcement_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Announcement Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement_Open_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Announcement Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Announcement_Status__c</fullName>
        <description>The current status of an announcement as determined by the system and based on whether the announcement is released and if it is between the open and close dates.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Announcement Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement_Type_Internal_Merit_Promoti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Announcement Type Internal Merit Promoti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Type_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Announcement Type Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Type_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Announcement Type Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointing_Authority_Direct_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointing Authority Direct Hire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointing_Authority_HRHF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointing Authority HRHF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Account.Facility_Type__c</field>
                <operation>equals</operation>
                <value>VAMC, VISN, VA-FACILITY</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>VA Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staffing Requests</relationshipLabel>
        <relationshipName>Staffing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>SR{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Calculate_EHG__c</fullName>
        <formula>IF(ISBLANK(Hiring_Need_Validated_Date__c), &quot;Hiring Need Validated Date not found. USA Staffing Action required&quot;,
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  3, &quot;Target: Request Personnel Action&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  9, &quot;Target: Complete Assessment Package&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  12, &quot;Target: Announcement Open&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  21, &quot;Target: Announcement Close&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  37, &quot;Target: Certificate Issue&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  52, &quot;Target: Certificate Review Returned&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  55, &quot;Target: Send Tentative Offer&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  65, &quot;Target: Initiate Background Investigation&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  67, &quot;Target: Send Official Offer&quot;, 
&quot;Target: New Hire Actual Start Date&quot;
)
)
)
)
)
)
)
)
)
)</formula>
        <label>Calculate Expected Hiring Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuance_Days__c</fullName>
        <description>Number of days from Announcement Closed to the Certificate Issued</description>
        <formula>IF(IF( Certificate_Issue_Date__c - Announcement_Close_Date__c &lt;0,null,Certificate_Issue_Date__c - Announcement_Close_Date__c)&gt;999,NULL,IF( Certificate_Issue_Date__c - Announcement_Close_Date__c &lt;0,null,Certificate_Issue_Date__c - Announcement_Close_Date__c))</formula>
        <label># Days Certificate Issuance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Issue_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certificate Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Issuer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certificate Issuer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Review_Return_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certificate Review Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Assessment_Package__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Complete Assessment Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Assessment_to_Announcement__c</fullName>
        <formula>IF(IF( Announcement_Open_Date__c - Complete_Assessment_Package__c &lt;0, null,Announcement_Open_Date__c - Complete_Assessment_Package__c)&gt;999,NULL,IF( Announcement_Open_Date__c - Complete_Assessment_Package__c &lt;0, null,Announcement_Open_Date__c - Complete_Assessment_Package__c))</formula>
        <label># Days Complete Assessment to Annc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Hiring_Stage__c</fullName>
        <formula>IF (NOT(ISBLANK(  New_Hire_Actual_Start__c  )),  &quot;New Hire Actual Start&quot;,
IF (NOT(ISBLANK( Send_Formal_Offer_Date__c )),  &quot;Send Formal Offer&quot;,
IF (NOT(ISBLANK( Initiate_Background_Investigation_Date__c )),  &quot;Initiate Background Investigation&quot;,
IF (NOT(ISBLANK( Tentative_Offer_Accepted__c )),&quot;Tentative Offer Accepted&quot;,
IF (NOT(ISBLANK( Send_Tentative_Offer_Date__c )),  &quot;Send Tentative Offer&quot;,
IF (NOT(ISBLANK(Certificate_Review_Return_Date__c  )),  &quot;Certificate Review Returned&quot;,
IF (NOT(ISBLANK( Certificate_Issue_Date__c )),  &quot;Certificate Issue&quot;,
IF (AND(NOT(ISBLANK(Announcement_Close_Date__c  )),Announcement_Close_Date__c &lt; Today()), &quot;Announcement Close&quot;,
IF (NOT(ISBLANK(Announcement_Open_Date__c  )),  &quot;Announcement Open&quot;,
IF (NOT(ISBLANK( Complete_Assessment_Package__c    )),  &quot;Complete Assessment Package&quot;,
IF (NOT(ISBLANK( Request_Personnel_Action__c    )),  &quot;Request Personnel Action&quot;,
&quot;Hiring Need Validation&quot;
)))))))))))</formula>
        <label>Current  Hiring Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Name__c</fullName>
        <formula>$User.FirstName &amp;&quot; &quot;&amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_External_Name__c</fullName>
        <description>Source: USA Staffing
Description: The external name of the hiring entity for which the staffing process is being carried out.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer External Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Request_Review_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Request Review Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysAnnouncementClosetoCertIssued__c</fullName>
        <formula>IF(ISNULL(Certificate_Issue_Date__c), Null, IF(ISNULL(Announcement_Close_Date__c), Null, Certificate_Issue_Date__c - Announcement_Close_Date__c))</formula>
        <label>* Days Announcement Close to Cert Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysCertificateIssuance__c</fullName>
        <formula>IF(ISNULL(Certificate_Issue_Date__c), Null, IF(ISNULL(Announcement_Close_Date__c), Null, Certificate_Issue_Date__c - Announcement_Close_Date__c))</formula>
        <label>* Days Certificate Issuance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysCompleteAssessmenttoAnnc__c</fullName>
        <formula>IF(ISNULL(Announcement_Open_Date__c), Null, IF(ISNULL(Complete_Assessment_Package__c), Null, Announcement_Open_Date__c - Complete_Assessment_Package__c))</formula>
        <label>* Days Complete Assessment to Annc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysFormalOffertoEOD__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), Null, IF(ISNULL(Send_Formal_Offer_Date__c), Null, New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c))</formula>
        <label>* Days Formal Offer to EOD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysHireValidtoFormalOffer__c</fullName>
        <formula>IF(ISNULL(Send_Formal_Offer_Date__c), Null, IF(ISNULL(Hiring_Need_Validated_Date__c), Null, Send_Formal_Offer_Date__c - Hiring_Need_Validated_Date__c))</formula>
        <label>* Days Hire Valid to Formal Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysHireValidtoPersonnelAction__c</fullName>
        <formula>IF(ISNULL(Request_Personnel_Action__c), Null, IF(ISNULL(Hiring_Need_Validated_Date__c), Null, Request_Personnel_Action__c - Hiring_Need_Validated_Date__c))</formula>
        <label>* Days Hire Valid to Personnel Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysHireValidtoTentativeAccepted__c</fullName>
        <formula>IF(ISNULL(Tentative_Offer_Accepted__c), Null, IF(ISNULL(Hiring_Need_Validated_Date__c), Null, Tentative_Offer_Accepted__c - Hiring_Need_Validated_Date__c))</formula>
        <label>* Days Hire Valid to Tentative Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysInvesttoFormalOffer__c</fullName>
        <formula>IF(ISNULL(Initiate_Background_Investigation_Date__c), Null, IF(ISNULL(Send_Formal_Offer_Date__c), Null, Send_Formal_Offer_Date__c - Initiate_Background_Investigation_Date__c))</formula>
        <label>* Days Invest to Formal Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysJOAOpen__c</fullName>
        <formula>IF(ISNULL(Announcement_Close_Date__c), Null, IF(ISNULL(Announcement_Open_Date__c), Null, Announcement_Close_Date__c - Announcement_Open_Date__c))</formula>
        <label>* Days JOA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysJOAReviewReturnedtoJOAOpen__c</fullName>
        <formula>IF(ISNULL(Announcement_Open_Date__c), Null, IF(ISNULL(Min_JOA_Review_Returned_Date__c), Null, Announcement_Open_Date__c - Min_JOA_Review_Returned_Date__c))</formula>
        <label>* Days JOA Review Returned to JOA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysJOAReviewSenttoReviewReturn__c</fullName>
        <formula>IF(ISNULL(Min_JOA_Review_Returned_Date__c), Null, IF(ISNULL(Min_JOA_Review_Sent_Date__c), Null, Min_JOA_Review_Returned_Date__c - Min_JOA_Review_Sent_Date__c))</formula>
        <label>* Days JOA Review Sent to Review Return</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysManagementSelection__c</fullName>
        <formula>IF(ISNULL(Certificate_Review_Return_Date__c), Null, IF(ISNULL(Certificate_Issue_Date__c), Null, Certificate_Review_Return_Date__c - Certificate_Issue_Date__c))</formula>
        <label>* Days Management Selection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOnboardingTime__c</fullName>
        <formula>IF(ISNULL(Send_Formal_Offer_Date__c), Null, IF(ISNULL(Send_Tentative_Offer_Date__c), Null, Send_Formal_Offer_Date__c - Send_Tentative_Offer_Date__c))</formula>
        <label>* Days Onboarding Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysRPAtoCompleteAssessment__c</fullName>
        <formula>IF(ISNULL(Complete_Assessment_Package__c), Null, IF(ISNULL(Request_Personnel_Action__c), Null, Complete_Assessment_Package__c - Request_Personnel_Action__c))</formula>
        <label>* Days RPA to Complete Assessment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysRecruitmentTime__c</fullName>
        <formula>IF(ISNULL(Send_Tentative_Offer_Date__c), Null, IF(ISNULL(Hiring_Need_Validated_Date__c), Null, Send_Tentative_Offer_Date__c - Hiring_Need_Validated_Date__c))</formula>
        <label>* Days Recruitment Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysT2H__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), Null, IF(ISNULL(Hiring_Need_Validated_Date__c), Null, New_Hire_Actual_Start__c - Hiring_Need_Validated_Date__c))</formula>
        <label>* Days T2H</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysTentOfferAcceptedtoInvest__c</fullName>
        <formula>IF(ISNULL(Initiate_Background_Investigation_Date__c), Null, IF(ISNULL(Tentative_Offer_Accepted__c), Null, Initiate_Background_Investigation_Date__c - Tentative_Offer_Accepted__c))</formula>
        <label>* Days Tent Offer Accepted to Invest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysTentOfferSenttoInvestigation__c</fullName>
        <formula>IF(ISNULL(Initiate_Background_Investigation_Date__c), Null, IF(ISNULL(Send_Tentative_Offer_Date__c), Null, Initiate_Background_Investigation_Date__c - Send_Tentative_Offer_Date__c))</formula>
        <label>* Days Tent Offer Sent to Investigation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysTentativeOfferSenttoAccepted__c</fullName>
        <formula>IF(ISNULL(Tentative_Offer_Accepted__c), Null, IF(ISNULL(Send_Tentative_Offer_Date__c), Null, Tentative_Offer_Accepted__c - Send_Tentative_Offer_Date__c))</formula>
        <label>* Days Tentative Offer Sent to Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysTentativeOffer__c</fullName>
        <formula>IF(ISNULL(Send_Tentative_Offer_Date__c), Null, IF(ISNULL(Certificate_Review_Return_Date__c), Null, Send_Tentative_Offer_Date__c - Certificate_Review_Return_Date__c))</formula>
        <label>* Days Tentative Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysVacancyCreatedtoCertIssued__c</fullName>
        <formula>IF(ISNULL(Certificate_Issue_Date__c), Null, IF(ISNULL(Vacancy_Created_Date__c), Null, Certificate_Issue_Date__c - Vacancy_Created_Date__c))</formula>
        <label>* Days Vacancy Created to Cert Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysVacancyCreatedtoCompAsstDate__c</fullName>
        <formula>IF(ISNULL(Complete_Assessment_Package__c), Null, IF(ISNULL(Vacancy_Created_Date__c), Null, Complete_Assessment_Package__c - Vacancy_Created_Date__c))</formula>
        <label>* Days Vacancy Created to Comp Asst Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysVacancyCreatedtoJOAOpen__c</fullName>
        <formula>IF(ISNULL(Announcement_Open_Date__c), Null, IF(ISNULL(Vacancy_Created_Date__c), Null, Announcement_Open_Date__c - Vacancy_Created_Date__c))</formula>
        <label>* Days Vacancy Created to JOA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysVacancyCreatedtoJOASent__c</fullName>
        <formula>IF(ISNULL(Min_JOA_Review_Sent_Date__c), Null, IF(ISNULL(Vacancy_Created_Date__c), Null, Min_JOA_Review_Sent_Date__c - Vacancy_Created_Date__c))</formula>
        <label>* Days Vacancy Created to JOA Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysVacancyCreatedtoNHCreated__c</fullName>
        <formula>IF(ISNULL(New_Hire_Creation_Date__c), Null, IF(ISNULL(Vacancy_Created_Date__c), Null, New_Hire_Creation_Date__c - Vacancy_Created_Date__c))</formula>
        <label>* Days Vacancy Created to NH Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysWaitingtoStartTime__c</fullName>
        <formula>IF(ISNULL(New_Hire_Actual_Start__c), Null, IF(ISNULL(Send_Formal_Offer_Date__c), Null, New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c))</formula>
        <label>* Days Waiting to Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Announcement_Close_to_Cert_Issued__c</fullName>
        <formula>IF(IF(  Certificate_Issue_Date__c -  Announcement_Close_Date__c  &lt;0, null, Certificate_Issue_Date__c - Announcement_Close_Date__c )&gt;999,NULL,IF(  Certificate_Issue_Date__c -  Announcement_Close_Date__c  &lt;0, null, Certificate_Issue_Date__c - Announcement_Close_Date__c ))</formula>
        <label># Days Announcement Close to Cert Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Hire_Valid_to_Formal_Offer__c</fullName>
        <formula>IF(IF(Send_Formal_Offer_Date__c - Hiring_Need_Validated_Date__c &lt;0, NULL, Send_Formal_Offer_Date__c - Hiring_Need_Validated_Date__c)&gt;999,NULL,IF(Send_Formal_Offer_Date__c - Hiring_Need_Validated_Date__c &lt;0, NULL, Send_Formal_Offer_Date__c - Hiring_Need_Validated_Date__c))</formula>
        <label># Days Hire Valid to Formal Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_JOA_Review_Returned_to_JOA_Open__c</fullName>
        <formula>IF(IF(Announcement_Open_Date__c - Min_JOA_Review_Returned_Date__c &lt;0, NULL, Announcement_Open_Date__c - Min_JOA_Review_Returned_Date__c)&gt;999,NULL,IF(Announcement_Open_Date__c - Min_JOA_Review_Returned_Date__c &lt;0, NULL, Announcement_Open_Date__c - Min_JOA_Review_Returned_Date__c))</formula>
        <label># Days JOA Review Returned to JOA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_JOA_Review_Sent_to_Review_Return__c</fullName>
        <formula>IF(IF(Min_JOA_Review_Returned_Date__c - Min_JOA_Review_Sent_Date__c &lt;0, NULL, Min_JOA_Review_Returned_Date__c - Min_JOA_Review_Sent_Date__c)&gt;999,NULL,IF(Min_JOA_Review_Returned_Date__c - Min_JOA_Review_Sent_Date__c &lt;0, NULL, Min_JOA_Review_Returned_Date__c - Min_JOA_Review_Sent_Date__c))</formula>
        <label># Days JOA Review Sent to Review Return</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Onboarding_Time__c</fullName>
        <formula>IF(IF(Send_Formal_Offer_Date__c - Send_Tentative_Offer_Date__c &lt;0, NULL, Send_Formal_Offer_Date__c - Send_Tentative_Offer_Date__c )&gt;999,NULL,IF(Send_Formal_Offer_Date__c - Send_Tentative_Offer_Date__c &lt;0, NULL, Send_Formal_Offer_Date__c - Send_Tentative_Offer_Date__c ))</formula>
        <label># Days Onboarding Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Recruitment_Time__c</fullName>
        <formula>IF(IF(Send_Tentative_Offer_Date__c  -  Hiring_Need_Validated_Date__c &lt;0, NULL, Send_Tentative_Offer_Date__c  -  Hiring_Need_Validated_Date__c)&gt;999,NULL,IF(Send_Tentative_Offer_Date__c  -  Hiring_Need_Validated_Date__c &lt;0, NULL, Send_Tentative_Offer_Date__c  -  Hiring_Need_Validated_Date__c))</formula>
        <label># Days Recruitment Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_T2H__c</fullName>
        <formula>IF(IF(New_Hire_Actual_Start__c - Hiring_Need_Validated_Date__c &lt;0, NULL, New_Hire_Actual_Start__c - Hiring_Need_Validated_Date__c)&gt;999,NULL,IF(New_Hire_Actual_Start__c - Hiring_Need_Validated_Date__c &lt;0, NULL, New_Hire_Actual_Start__c - Hiring_Need_Validated_Date__c))</formula>
        <label># Days T2H</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Tent_Offer_Accepted_to_Invest__c</fullName>
        <formula>IF(IF( Initiate_Background_Investigation_Date__c - Tentative_Offer_Accepted__c &lt; 0,NULL,Initiate_Background_Investigation_Date__c - Tentative_Offer_Accepted__c)&gt;999,NULL,IF( Initiate_Background_Investigation_Date__c - Tentative_Offer_Accepted__c &lt; 0,NULL,Initiate_Background_Investigation_Date__c - Tentative_Offer_Accepted__c))</formula>
        <label># Days Tent Offer Accepted to Invest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Tentative_Offer_Sent_to_Accepted__c</fullName>
        <formula>IF(IF( Tentative_Offer_Accepted__c - Send_Tentative_Offer_Date__c &lt;0,NULL,Tentative_Offer_Accepted__c - Send_Tentative_Offer_Date__c)&gt;999,NULL,IF( Tentative_Offer_Accepted__c - Send_Tentative_Offer_Date__c &lt;0,NULL,Tentative_Offer_Accepted__c - Send_Tentative_Offer_Date__c))</formula>
        <label># Days Tentative Offer Sent to Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Vacancy_Created_to_Cert_Issued__c</fullName>
        <formula>IF(IF(Certificate_Issue_Date__c - Vacancy_Created_Date__c &lt;0, NULL, Certificate_Issue_Date__c - Vacancy_Created_Date__c)&gt;999,NULL,IF(Certificate_Issue_Date__c - Vacancy_Created_Date__c &lt;0, NULL, Certificate_Issue_Date__c - Vacancy_Created_Date__c))</formula>
        <label># Days Vacancy Created to Cert Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Vacancy_Created_to_Comp_Asst_Date__c</fullName>
        <formula>IF(IF(Complete_Assessment_Package__c - Vacancy_Created_Date__c &lt;0, NULL, Complete_Assessment_Package__c - Vacancy_Created_Date__c)&gt;999,NULL,IF(Complete_Assessment_Package__c - Vacancy_Created_Date__c &lt;0, NULL, Complete_Assessment_Package__c - Vacancy_Created_Date__c))</formula>
        <label># Days Vacancy Created to Comp Asst Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Vacancy_Created_to_JOA_Open__c</fullName>
        <formula>IF(IF(Announcement_Open_Date__c - Vacancy_Created_Date__c &lt;0, NULL, Announcement_Open_Date__c - Vacancy_Created_Date__c)&gt;999,NULL,IF(Announcement_Open_Date__c - Vacancy_Created_Date__c &lt;0, NULL, Announcement_Open_Date__c - Vacancy_Created_Date__c))</formula>
        <label># Days Vacancy Created to JOA Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Vacancy_Created_to_JOA_Sent__c</fullName>
        <formula>IF(IF(Min_JOA_Review_Sent_Date__c - Vacancy_Created_Date__c &lt;0, NULL, Min_JOA_Review_Sent_Date__c - Vacancy_Created_Date__c)&gt;999,NULL,IF(Min_JOA_Review_Sent_Date__c - Vacancy_Created_Date__c &lt;0, NULL, Min_JOA_Review_Sent_Date__c - Vacancy_Created_Date__c))</formula>
        <label># Days Vacancy Created to JOA Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Vacancy_Created_to_NH_Created__c</fullName>
        <formula>IF(IF(New_Hire_Creation_Date__c - Vacancy_Created_Date__c &lt;0, NULL, New_Hire_Creation_Date__c - Vacancy_Created_Date__c)&gt;999,NULL,IF(New_Hire_Creation_Date__c - Vacancy_Created_Date__c &lt;0, NULL, New_Hire_Creation_Date__c - Vacancy_Created_Date__c))</formula>
        <label># Days Vacancy Created to NH Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Waiting_to_Start_Time__c</fullName>
        <formula>IF(IF(New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c &lt;0, NULL, New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c)&gt;999,NULL,IF(New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c &lt;0, NULL, New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c))</formula>
        <label># Days Waiting to Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <formula>Position_Number__r.Department_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>Position_Number__r.Department_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Appointment_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Appointment Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Appointment__c</fullName>
        <description>The effective date of appointment of a new hire as shown on the SF-50.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date of Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_HiringStage__c</fullName>
        <formula>IF(ISBLANK(Hiring_Need_Validated_Date__c), &quot;Hiring Need Validated Date not found. USA Staffing Action required&quot;,IF(Occupational_Series__c  &lt;&gt; &quot;0602&quot; &amp;&amp; Occupational_Series__c  &lt;&gt; &quot;0603&quot; &amp;&amp; Occupational_Series__c  &lt;&gt; &quot;0604&quot; &amp;&amp; Occupational_Series__c  &lt;&gt; &quot;0605&quot; &amp;&amp; Occupational_Series__c  &lt;&gt; &quot;0610&quot; &amp;&amp; Occupational_Series__c  &lt;&gt; &quot;0662&quot; &amp;&amp; Occupational_Series__c  &lt;&gt; &quot;0668&quot; , Calculate_EHG__c,
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  3, &quot;Target: Request Personnel Action&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  9, &quot;Target: Complete Assessment Package&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  12, &quot;Target: Announcement Open&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  22, &quot;Target: Announcement Close&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  38, &quot;Target: Certificate Issue&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  53, &quot;Target: Certificate Review Returned&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  56, &quot;Target: Send Tentative Offer&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  58, &quot;Target: Initiate Background Investigation&quot;, 
IF((TODAY() - Hiring_Need_Validated_Date__c)  &lt;  87, &quot;Target: Send Official Offer&quot;, 
&quot;Target: New Hire Actual Start Date&quot;
)
)
)
)
)
)
)
)
)
)
)</formula>
        <inlineHelpText>This field requires that the associated USA Staffing Request Number be entered in the &quot;USA Staffing Request Number&quot; section below.  If time to hire milestones are not populating, check to ensure that the USA Staffing Request number is correctly entered.</inlineHelpText>
        <label>Expected Hiring Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_T2H_EOD__c</fullName>
        <formula>Hiring_Need_Validated_Date__c  + 80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected T2H EOD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_New_to_Federal_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <formula>Position_Number__r.FTE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Offer_to_EOD_Days__c</fullName>
        <formula>IF(IF( New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c  &lt;0,null,New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c)&gt;999,NULL,IF( New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c  &lt;0,null,New_Hire_Actual_Start__c - Send_Formal_Offer_Date__c))</formula>
        <label># Days Formal Offer to EOD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiringManager_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager Assistant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staffing Requests (Hiring Manager Assistant)</relationshipLabel>
        <relationshipName>Staffing_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter any remarks related to this staffing request that you&apos;d like to share as part of the reports. These remarks may be shared on external reports.</inlineHelpText>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select the Hiring Manager associated with this request.</inlineHelpText>
        <label>Hiring Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staffing Requests</relationshipLabel>
        <relationshipName>Staffing_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hiring_Need_Validated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hiring Need Validated Date</label>
        <type>Date</type>
    </fields>
</CustomObject>